--- a/src/index.css
+++ b/src/index.css
@@ -29,14 +29,15 @@ h1 {
 
 .picture {
   display: flex;
+  justify-content: center;
   margin: 3%;
 }
 
 .ingredients {
-  margin-right: 20%;
-  margin-left: 20%;
+  margin-right: 8%;
   font-size: 1.5rem;
   margin-bottom: 3%;
+  /* margin-top: 15%; */
   color: darkslategrey;
 }
 
@@ -50,8 +51,9 @@ h1 {
 }
 
 img {
-  height: 200px;
-  width: 300px;
+  height: 300px;
+  width: 400px;
+  object-fit: contain;
 }
 
 .recipeSearchBox {
